namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-appointment-reminders-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-appointment-reminders-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    cloud-platform.justice.gov.uk/namespace: "hmpps-appointment-reminders-dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "hmpps-appointment-reminders"
    cloud-platform.justice.gov.uk/owner: "Probation Integration <probation-integration-team@digital.justice.gov.uk>"
    cloud-platform.justice.gov.uk/slack-channel: "probation-integration-team"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-appointment-reminders-ui"
    cloud-platform.justice.gov.uk/team-name: "probation-integration"
    cloud-platform.justice.gov.uk/review-after: ""
